added headshot. more style changes

--- a/src/style/sections/_hero.scss
+++ b/src/style/sections/_hero.scss
@@ -1,6 +1,6 @@
 #hero {
-  min-height: 100vh;
-  height: 100vh;
+  min-height: 60vh;
+  height: 60vh;
   display: flex;
   align-items: center;
   border-bottom: 0px;
@@ -29,7 +29,7 @@
     font-size: 5.6rem;
     font-weight: 700;
     margin-bottom: 3.2rem;
-    text-align: left;
+    text-align: center;
 
     @include respond(tab-land) {
       font-size: 4rem;
@@ -49,6 +49,7 @@
 
   .hero-cta {
     display: flex;
+    justify-content: center;
 
     @include respond(tab-port) {
       justify-content: center;
