--- a/src/style/sections/_hero.scss
+++ b/src/style/sections/_hero.scss
@@ -1,6 +1,6 @@
 #hero {
-  min-height: 60vh;
-  height: 60vh;
+  min-height: 100vh;
+  height: 100vh;
   display: flex;
   align-items: center;
   border-bottom: 0px;
@@ -61,6 +61,29 @@
       @include respond(phone) {
         font-size: 2rem;
       }
+    }
+  }
+}
+
+
+.social-links {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+
+  a {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    color: $dark-blue-text;
+    font-size: 3rem;
+    width: 5rem;
+    height: 5rem;
+    margin: $default-font-size $default-font-size;
+    transition: all 0.2s ease-in;
+
+    &:hover {
+      transform: translateY(-2px);
     }
   }
 }
